--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -7,3 +7,41 @@
   background-color: rgba(126, 126, 126, 0.2);
   border-radius: 0.5em;
 }
+
+body {
+  background-image: url('/images/Thomas_ChessBlogBackground.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+/* Responsive Features */
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  /* CSS styles for tablets in landscape mode */
+}
+
+@media screen and (max-width: 767px) and (orientation: portrait) {
+  /* CSS styles for tablets in portrait mode */
+}
+
+@media screen and (max-width: 767px) {
+  /* CSS styles for smartphones */
+}
+
+@media screen and (min-width: 1200px) {
+  /* CSS styles for large desktop screens */
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-resolution: 192dpi) {
+  /* CSS styles for high-resolution displays */
+}
+
+@media (color-gamut: srgb) {
+  /* CSS styles for screens with an sRGB color gamut */
+}
