--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,18 +2,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CMS Blog</title>
+    <title>Thomas' Chess Blog</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/dashboard.css" />
+    <link rel="stylesheet" type="text/css" href="/css/dashboard.css" />
   </head>
   <body class="bg-dark text-white">
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Chess Blog</a>
+          <a class="navbar-brand fs-2" href="/">Thomas' Chess Blog</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -53,6 +53,16 @@
     <div class="container">
       {{{body}}}
     </div>
+<footer class="bg-dark text-white py-3" style="position: fixed; bottom: 0; width: 100%;">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6 text-center">
+        <h5>&copy; Designed with ⏳ by Thomas Calle</h5>
+        <h6>&copy; 2023 All Rights Reserved.</h6>
+      </div>
+    </div> 
+  </div>
+</footer>
     <script src="/js/delete-post.js"></script>
     <script src="/js/login.js"></script>
     <script src="/js/logout.js"></script>
