Update:handlebars,README.md

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -2,24 +2,24 @@
 <main class="container mt-5">
   <article>
     <h1>{{title}}</h1>
-    <p>By {{user.username}} on {{format_date createdAt}}</p>
+    <p>Created by: {{user.username}} | Date: {{format_date createdAt}}</p>
     <p>{{content}}</p>
   </article>
   {{#if logged_in}}
     <form class="new-chess-comment-form" class="mb-3">
       <div class="mb-3">
-        <label for="comment" class="form-label">Add a comment</label>
+        <label for="comment" class="form-label">Add Comment:</label>
         <textarea
           class="form-control"
           id="content-new-chess-comment"
           rows="3"
-          placeholder="Add a comment"
+          placeholder="Add a comment..."
         ></textarea>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   {{/if}}
-  <h2>Comments</h2>
+  <h2>Comment History:</h2>
   {{#each comments}}
     <div class="comment mb-3">
       <p>{{comment_text}}</p>
