--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
   <h1 class="mb-4">Sign Up</h1>
   <form id="signup-form" class="chess-signup-form">
     <div class="mb-3">
-      <label for="username" class="form-label">Username</label>
+      <label for="username" class="form-label">Username:</label>
       <input
         type="text"
         class="form-control"
@@ -11,16 +11,16 @@
       />
     </div>
     <div class="mb-3">
-      <label for="email" class="form-label">Email</label>
+      <label for="email" class="form-label">Email:</label>
       <input type="email" class="form-control" id="email" placeholder="Email" />
     </div>
     <div class="mb-3">
-      <label for="password" class="form-label">Password</label>
+      <label for="password" class="form-label">Password:</label>
       <input
         type="password"
         class="form-control"
         id="password"
-        placeholder="Password"
+        placeholder="Password must be over (8) Characters long"
       />
     </div>
     <button type="submit" class="btn btn-primary">Sign Up</button>
