--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,16 +2,16 @@
   <div class="row">
     <div class="col-12">
       <h1 class="mb-4">Dashboard</h1>
-      <a href="/newpost" class="btn btn-primary">New Post</a>
+      <a href="/newpost" class="btn btn-primary">Create a New Blog Post</a>
     </div>
   </div>
   <br>
-  <h1 class="mb-4">Your Posts</h1>
+  <h1 class="mb-4">Chess Blog Contributions:</h1>
   {{#each posts}}
     <div class="post-container post mb-3">
       <h2><a href="/post/{{id}}" class="text-decoration-none text-reset">{{title}}</a></h2>
-      <p>By {{user.username}} on {{format_date createdAt}}</p>
-      <a href="/editpost/{{id}}" class="btn btn-warning">Edit</a>
+      <p>Created by: {{user.username}} | Date: {{format_date createdAt}}</p>
+      <a href="/editpost/{{id}}" class="btn btn-warning">Edit Post</a>
       <button class="btn btn-danger delete-post" data-post-id="{{id}}">Delete</button>
     </div>
   {{/each}}
