--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,7 +42,7 @@
                   <a class="nav-link" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/signup">Signup</a>
+                  <a class="nav-link" href="/signup">Sign Up</a>
                 </li>
               {{/if}}
             </ul>
