--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,26 +1,26 @@
 <div class="container mt-5">
-  <h2 class="mb-4">Create a new post</h2>
+  <h2 class="mb-4">Create a Blog Contribution.</h2>
   <form class="new-chess-post-form">
     <div class="mb-3">
-      <label for="title-new-chess-post" class="form-label">Title</label>
+      <label for="title-new-chess-post" class="form-label">Title:</label>
       <input
         type="text"
         class="form-control"
         id="title-new-chess-post"
-        placeholder="Title"
+        placeholder="Enter a title of your choice"
       />
     </div>
     <div class="mb-3">
-      <label for="content-new-chess-post" class="form-label">Content</label>
+      <label for="content-new-chess-post" class="form-label">Content:</label>
       <textarea
         class="form-control"
         id="content-new-chess-post"
         rows="5"
-        placeholder="Content"
+        placeholder="Enter content here"
       ></textarea>
     </div>
     <div class="mb-3">
-      <button type="submit" class="btn btn-primary">Create</button>
+      <button type="submit" class="btn btn-primary">Create Post</button>
     </div>
   </form>
 </div>
